fixing the spacing issues on the licenseplate partial

--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -176,23 +176,20 @@ body {
     color: black;
     width: 95px;
     padding-top: 27px;
-    
 }
 
-.yellowdiamond{
-	width: 105px;
-	height: 105px;
-	position: absolute;
-	left: -5px;
-	top: -2px;
+.yellowdiamond {
+    width: 105px;
+    height: 105px;
+    position: absolute;
+    left: -5px;
+    top: -2px;
 }
-
 
 .playerbuttontext:hover {
     color: grey;
     font-weight: bold;
 }
-
 
 .playerbuttonone {
     top: 35px;
@@ -316,19 +313,32 @@ body {
     border: 3px white solid;
     border-radius: 5px;
     background-color: #308446;
-    text-align: center;
-    font-size: 18px;
 }
 
 .plateInfo {
     display: inline-block;
-    margin-bottom: 5px;
+    text-decoration: none;
+    color: white;
+    width: 104px;
+    height: 85px;
+    margin: 0px 5px;
+    text-align: center;
+    font-size: 18px;
+}
+
+.plateInfo:hover {
+    background-color: #5EBE77;
+    border-radius: 5px;
+    opacity: 0.7;
+    color: black;
 }
 
 .plateInfoDiv {
     position: absolute;
-    top: 70px;
-    left: 77px;
+    top: 155px;
+    z-index: 100;
+    left: 105px;
+    width: 590px;
 }
 
 .plateImage {
@@ -336,7 +346,7 @@ body {
     height: 50px;
     border: 2px black solid;
     border-radius: 5px;
-    margin: 5px 5px;
+    margin-bottom: 5px;
 }
 
 .plateScrollButton {
@@ -345,24 +355,30 @@ body {
     height: 43px;
     border-radius: 40px;
     border: 2px white solid;
-    top: 120px;
+    top: 58px;
     background-color: #272727;
 }
 
+.plateScrollButton:hover {
+    background-color: grey;
+}
+
 .plateScrollButtonRight {
-    left: 646px;
+    left: 674px;
+    margin: 19px 29px 19px 9px;
 }
 
 .plateScrollButtonLeft {
-    left: 7px;
+    left: -20px;
+    margin: 19px 9px 19px 29px;
 }
 
-.arrow{
-	position: absolute;
-	top: 6px;
-	left: 7px;
-	width: 30px;
-	height: 30px;
+.arrow {
+    position: absolute;
+    top: 6px;
+    left: 7px;
+    width: 30px;
+    height: 30px;
 }
 
 .letterSelect {
@@ -374,21 +390,26 @@ body {
     margin: 30px 5px 10px 5px;
     display: inline-block;
     text-align: center;
-    padding-top: 7px;
+    padding-top: 9px;
+    text-decoration: none;
+    color: white;
+}
+
+.letterSelect:hover{
+	background-color: grey;
+
 }
 
 .letterSelectButton {
-	position: absolute;
-	top: 50px;
-	z-index: 100;
-	left: 105px;
-	width: 590px;
-
-
+    position: absolute;
+    top: 50px;
+    z-index: 100;
+    left: 105px;
+    width: 590px;
 }
 
-.scorebutton{
-	position: absolute;
+.scorebutton {
+    position: absolute;
     top: 300px;
     left: 25px;
     height: 50px;
